ds2022-k8s/templates/ds2022/nginx-versions/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ds2022-versions-service
  namespace: uvasds-services
spec:
  selector:
    app: nginx-ds2022-versions
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
