ds2022-k8s/templates/ds2022/nginx-versions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-ds2022-versions-nginx-ingress
  namespace: uvasds-services
spec:
  rules:
  - host: nginx-ds2022.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-ds2022-versions-service
            port:
              number: 8080
